--- a/app/templates/app/administrador/disponibilidad/indexDisponibilidad.html
+++ b/app/templates/app/administrador/disponibilidad/indexDisponibilidad.html
@@ -23,7 +23,7 @@
         <th scope="col">Hora Disponibilidad</th>
         <th scope="col">Capacidad</th>
         <th scope="col">Estado Disponibilidad</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -62,7 +62,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar la disponibilidad!",
+        "text": "¡Estás a punto de eliminar la disponibilidad!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
