--- a/app/templates/app/administrador/gestion-cajas/indexCajas.html
+++ b/app/templates/app/administrador/gestion-cajas/indexCajas.html
@@ -23,7 +23,7 @@
         <th scope="col">Fecha de Creacion</th>
         <th scope="col">Estado de Caja</th>
         <th scope="col">Usuario Asignado</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -62,7 +62,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar la Caja!",
+        "text": "¡Estás a punto de eliminar la Caja!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
