--- a/app/templates/app/administrador/menus/indexMenus.html
+++ b/app/templates/app/administrador/menus/indexMenus.html
@@ -21,7 +21,7 @@
         <!-- <th scope="col">#</th> -->
         <th scope="col">N° Menu</th>
         <th scope="col">Nombre</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -58,7 +58,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar el menu!",
+        "text": "¡Estás a punto de eliminar el menu!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
