--- a/app/templates/app/administrador/mesas/indexMesas.html
+++ b/app/templates/app/administrador/mesas/indexMesas.html
@@ -23,7 +23,7 @@
         <th scope="col">Cantidad Sillas</th>
         <th scope="col">Ubicación</th>
         <th scope="col">Estado Mesa</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -62,7 +62,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar la Mesa!",
+        "text": "¡Estás a punto de eliminar la Mesa!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
