--- a/app/templates/app/caja/pago-efectivo/indexPagoEfectivo.html
+++ b/app/templates/app/caja/pago-efectivo/indexPagoEfectivo.html
@@ -70,7 +70,7 @@
         <th scope="col">Ubicacion</th>
         <th scope="col">Estado</th>
         <th scope="col">Monto a Pagar</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
