--- a/app/templates/app/finanzas/cajas/indexAperturaCajasFinanzas.html
+++ b/app/templates/app/finanzas/cajas/indexAperturaCajasFinanzas.html
@@ -22,7 +22,7 @@
         <th scope="col">Fecha de Creacion</th>
         <th scope="col">Estado de Caja</th>
         <th scope="col">Usuario Asignado</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
