--- a/app/templates/app/finanzas/facturas/indexFacturas.html
+++ b/app/templates/app/finanzas/facturas/indexFacturas.html
@@ -30,7 +30,7 @@
         <th scope="col">N° Orden</th>
         <th scope="col">Metodo de Pago</th>
         <th scope="col">Estado</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -75,7 +75,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar la factura!",
+        "text": "¡Estás a punto de eliminar la factura!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
