--- a/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
+++ b/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
@@ -23,7 +23,7 @@
         <th scope="col">Estado</th>
         <th scope="col">Proveedor</th>
         <th scope="col">Usuario</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
