--- a/app/templates/app/administrador/proveedores/indexProveedores.html
+++ b/app/templates/app/administrador/proveedores/indexProveedores.html
@@ -25,7 +25,7 @@
         <th scope="col">Telefono</th>
         <th scope="col">Correo</th>
         <th scope="col">Giro</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -64,7 +64,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar al proveedor!",
+        "text": "¡Estás a punto de eliminar al proveedor!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
