--- a/app/templates/app/administrador/recetas/indexRecetasTwo.html
+++ b/app/templates/app/administrador/recetas/indexRecetasTwo.html
@@ -23,7 +23,7 @@
         <th scope="col">Tiempo preparación</th>
         <th scope="col">Temperatura ideal</th>
         <th scope="col">Instrucciones</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -62,7 +62,7 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar la receta!",
+        "text": "¡Estás a punto de eliminar la receta!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
