--- a/app/templates/app/bodega/pedidos/indexPedidosBodegas.html
+++ b/app/templates/app/bodega/pedidos/indexPedidosBodegas.html
@@ -22,7 +22,7 @@
         <th scope="col">Proveedor</th>
         <th scope="col">Realizado Por</th>
         <th scope="col">Estado</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
