[FIX] reportes utilidad y administrador

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -150,6 +150,12 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Cajas</span>
           </a>
+
+          <a class="nav-link" href="{% url 'indexReporteAdministrador' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Generar Reporte</span>
+          </a>
+
         </div>
         {% endif %}
       </li>
