[CHANGE] texto tipo de reporte

--- a/app/templates/app/finanzas/reporte/utilidad.html
+++ b/app/templates/app/finanzas/reporte/utilidad.html
@@ -14,7 +14,7 @@
                     <!-- <label for="">Fecha Desde:</label>
                     <input type="date" class="form-control"> -->
                 
-                    <label for="" class="mt-4">Seleccione una opción de descarga</label>
+                    <label for="" class="mt-4">Tipo de Reporte:</label>
                     <select name="tipo" id="tipos-facturas" class="form-control">
                         <option value="1">Generar reporte utilidad diaria (HOY)</option>
                         <option value="2">Generar reporte utilidad del MES ACTUAL</option>
