--- a/app/templates/app/administrador/recetas/indexRecetasTwo.html
+++ b/app/templates/app/administrador/recetas/indexRecetasTwo.html
@@ -37,6 +37,7 @@
         <td>{{r.6}}</td>
         <td class="p-1">
           <a href="{% url 'indexIngredientesRecetasTwo' r.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Ingredientes</i></a>
+          <a href="{% url 'modificarRecetasTwo' r.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Visualizar</i></a>
         </td>
       </tr>
       {% endfor %}
