[FIX] required and min cuadratura

--- a/app/templates/app/finanzas/cajas/cuadrarCajas.html
+++ b/app/templates/app/finanzas/cajas/cuadrarCajas.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="p_monto_cuadrado" >Monto Cuadrado:</label>
-                    <input type="number" name="p_monto_cuadrado" id="" class="form-control text-center">
+                    <input type="number" name="p_monto_cuadrado" id="" class="form-control text-center" min="0" required>
                 </div>
                 <div class="form-group col-md-6" id="motivoDescuadre">
                     <label for="p_id_motivo" >Motivo Descuadre:</label>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-group col-md-6" id="montoDescuadre">
                     <label for="p_monto_descuadre" >Monto Descuadre:</label>
-                    <input type="number" name="p_monto_descuadre" id="montoDescuadreInput" value="0" class="form-control text-center">
+                    <input type="number" name="p_monto_descuadre" id="montoDescuadreInput" value="0" class="form-control text-center" min="0" required>
                 </div>
             </div>
         </div>
