--- a/app/templates/app/administrador/pedidos-proveedor/generarOrdenCompra.html
+++ b/app/templates/app/administrador/pedidos-proveedor/generarOrdenCompra.html
@@ -21,7 +21,7 @@
                         <input name="p_neto" type="number" class="form-control">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="p_vigencia">Vigencia (Dias):</label>
+                        <label for="p_vigencia">Vigencia (Días):</label>
                         <input name="p_vigencia" type="number" max="99" class="form-control">
                     </div>
                 </div>
