--- a/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
+++ b/app/templates/app/administrador/pedidos-proveedor/indexPedidosProveedor.html
@@ -6,7 +6,7 @@
 
 {{message}}
 <div id="productos-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-  <h2>Pedidos de Proovedores</h2>
+  <h2>Pedidos de Proveedores</h2>
 
   <div id="toolbar">
   </div>
