--- a/app/templates/app/administrador/reporte/indexReporte.html
+++ b/app/templates/app/administrador/reporte/indexReporte.html
@@ -15,7 +15,7 @@
                     <input class="form-control" id="initial_date" type="date" name="initial_date" required/>
                 </div>
                 <div class="col md-6">
-                    <label for="finish_date">Fecha Inicio</label>
+                    <label for="finish_date">Fecha Término</label>
                     <input class="form-control" id="finish_date" type="date" name="finish_date" required/>
                 </div>
 
