--- a/app/templates/app/caja/pago-efectivo/detalleMesasCajas.html
+++ b/app/templates/app/caja/pago-efectivo/detalleMesasCajas.html
@@ -22,7 +22,7 @@
             <input type="number" name="p_nro_mesa" class="form-control" value="{{m.1}}" disabled>
           </div>
           <div class="form-group col-md-6">
-            <label for="p_cant_sillas" >Ubicacion:</label>
+            <label for="p_cant_sillas" >Ubicación:</label>
             <input type="text" name="p_cant_sillas" id="" class="form-control" value="{{m.3}}" disabled>
           </div>
           <div class="form-group col-md-6">
