--- a/app/templates/app/cliente/clienteMenu.html
+++ b/app/templates/app/cliente/clienteMenu.html
@@ -156,7 +156,7 @@
 
     <button type="submit" class="btn btn-primary btn-lg" id="btn-agregar">Agregar Producto</button>
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <a class="btn btn-primary btn-lg" type="button" href="{% url 'listarDetalleOrden' id_orden %}">Finalizar Pedido</a>
+        <a class="btn btn-primary btn-lg" type="button" href="{% url 'listarDetalleOrden' id_orden %}">No quiero más... por ahora</a>
 </div>
 </form>
 {% endblock %}
