--- a/app/templates/app/cliente/detalleCliente.html
+++ b/app/templates/app/cliente/detalleCliente.html
@@ -55,7 +55,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropTwoLabel">Envio de Comprobante</h5>
+                    <h5 class="modal-title" id="staticBackdropTwoLabel">Envío de Comprobante</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -82,8 +82,7 @@
     <br>
 
     <div class="d-flex justify-content-center">
-        <a type="button" class="btn btn-primary btn-xl btn-lg" href="{% url 'clienteMenu' id_orden %}">Volver a
-            Pedir</a>
+        <a type="button" class="btn btn-primary btn-xl btn-lg" href="{% url 'clienteMenu' id_orden %}">Pedir extra</a>
     </div>
     <br>
     </div>
@@ -92,7 +91,7 @@
         <a type="button" class="btn btn-primary btn-lg" href="{% url 'pagoCliente' %}">Pago en efectivo</a>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
-            data-bs-target="#staticBackdrop" onclick="ingresarNotificacion({{id_orden}})">Solicitar Revision</a>
+            data-bs-target="#staticBackdrop" onclick="ingresarNotificacion({{id_orden}})">Solicitar revisión</a>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
             data-bs-target="#staticBackdropTwo">Pago con Tarjeta</a>
@@ -103,14 +102,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Revision de Cuenta</h5>
+                <h5 class="modal-title" id="staticBackdropLabel">Revisión de cuenta</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="row">
 
                     <div class="form-group col-md-12 center">
-                        <h2>El Garzon se acercara a su mesa</h2>
+                        <h2>El garzón se acercará a su mesa</h2>
                     </div>
                 </div>
             </div>
