--- a/app/templates/app/finanzas/cajas/indexGestionCajaFinanzas.html
+++ b/app/templates/app/finanzas/cajas/indexGestionCajaFinanzas.html
@@ -6,7 +6,7 @@
 
 <!-- {{message}} -->
 <div id="proveedores-table" class="col-lg-10 col-sm-9 mt-5 d-block mx-auto" style="text-align:center;">
-  <h2>Gestion Caja Finanzas</h2>
+  <h2>Gestión Caja Finanzas</h2>
 
   <div id="toolbar">
   </div>
