--- a/app/templates/app/caja/pago-efectivo/generarBoleta.html
+++ b/app/templates/app/caja/pago-efectivo/generarBoleta.html
@@ -36,7 +36,9 @@
         <div class="col mt-4">
             <div class="row">
                 <div class="col-4">
-
+                  <a class="btn btn-primary" href="{% url 'indexPagoEfectivo' %}">
+                    Volver
+                  </a>
                 </div>
                 <div class="col-4">
                     <button class="btn btn-primary text-center" onclick="ejecutarloader({{id_boleta}})">
